--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,15 +15,18 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.3
-  flutter_tex: ^4.0.3
   json_annotation: ^4.9.0
+  flutter_tex: ^5.1.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/questions.json
+
