--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path_provider: ^2.1.3
   json_annotation: ^4.9.0
   flutter_tex: ^5.1.10
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
